[package]
name = "tower-filter"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
publish = false

[dependencies]
futures = "0.1"
tower-service = "0.2.0"
tower-layer = { version = "0.1", path = "../tower-layer" }
tower-util = { version = "0.1.0", path = "../tower-util" }

[dev-dependencies]
tower-test = { version = "0.1", path = "../tower-test" }
